k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-info
  labels:
    app: system-info
spec:
  selector:
    matchLabels:
      app: system-info
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: system-info
    spec:
      containers:
        - name: system-info
          image: xuujie/system-info:latest
          ports:
            - containerPort: 8080
