k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: system-info
spec:
  selector:
      app: system-info
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 8080
  type: LoadBalancer
