k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: system-info-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: system-info-service
              servicePort: 80
